# AI-HCI-LAB-Internship-2026

./: .gitignore  README.md
Daily_Logs/: Week-2.md  Week-3.md  Week-4.md  Week-6.md  Week-7.md  Week-8.md
LiDAR/: lidar_obstacle_navigation.py  lidar_raw_numerical_data.py
ROS2/ros2_ws/src/my_bot/: CMakeLists.txt  package.xml
ROS2/ros2_ws/src/my_bot/config/: bridge_parameters.yaml  ekf.yaml  rf2o_params.yaml  twist_mux.yaml
ROS2/ros2_ws/src/my_bot/description/: inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
ROS2/ros2_ws/src/my_bot/launch/: launch_sim.launch.py  rsp.launch.py
ROS2/ros2_ws/src/my_bot/worlds/: empty.world
ROS2/ros2_ws/src/omni_bot/: CMakeLists.txt  OMNI_KINEMATICS.md  README.md  package.xml
ROS2/ros2_ws/src/omni_bot/description/: inertial_macros.xacro  robot.urdf.xacro  robot_core.xacro
ROS2/ros2_ws/src/omni_bot/launch/: launch_sim.launch.py  rsp.launch.py
ROS2/ros2_ws/src/omni_bot/scripts/: fake_planar_move.py
ROS2/ros2_ws/src/omni_bot/worlds/: empty.world
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/sllidar_ros2/share/sllidar_ros2/: local_setup.bash  local_setup.dsv  local_setup.fish  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/sllidar_ros2/share/sllidar_ros2/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  sllidar_ros2Config-version.cmake  sllidar_ros2Config.cmake
ros2_ws/install/sllidar_ros2/share/sllidar_ros2/environment/: path.dsv  (+1 more)
ros2_ws/log/: latest_build
ros2_ws/src/sllidar_ros2/: CMakeLists.txt
(+27 files in other folders)
